workin on db